# scrape_edu

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  startscrape.bat  startscrape.sh
config/: default.yaml
scrape_edu/: __init__.py  __main__.py  cli.py  config.py  interactive.py
scrape_edu/browser/: playwright_pool.py  renderer.py
scrape_edu/data/: __init__.py  ipeds_loader.py  manifest.py  models.py  school.py
scrape_edu/discovery/: homepage_crawler.py  serper_search.py  url_classifier.py
scrape_edu/net/: __init__.py  http_client.py  rate_limiter.py
scrape_edu/pipeline/: orchestrator.py  phase_handlers.py  phases.py  school_worker.py
scrape_edu/scrapers/: __init__.py  base.py  catalog_scraper.py  faculty_scraper.py  robots_checker.py  syllabus_scraper.py
scrape_edu/utils/: __init__.py  file_utils.py  logging_setup.py  slug.py  url_utils.py
scripts/: analyze_manifest.py  download_ipeds.py
tests/: test_analyze_manifest.py  test_base_scraper.py  test_catalog_scraper.py  test_cli.py  test_config.py  test_download_ipeds.py  test_faculty_scraper.py  test_file_utils.py  test_homepage_crawler.py  test_http_client.py  test_interactive.py  test_ipeds_loader.py  test_logging_setup.py  test_manifest.py  test_models.py  test_orchestrator.py  test_phases.py  test_playwright_pool.py  test_rate_limiter.py  test_renderer.py  test_robots_checker.py  test_school_worker.py  test_serper_search.py  test_slug.py  test_syllabus_scraper.py  test_url_classifier.py  test_url_utils.py
